ExpenseTrackerBackend/src/main/java/com/example/expenseit/errors/authentication/JwtTokenExpiredException.java
package com.example.expenseit.errors.authentication;

public class JwtTokenExpiredException extends AuthException{
    public JwtTokenExpiredException(String message) {
        super(message);
    }
}
